Sanity check the version specified in the mod file to make sure it's compatible with JPMS standards for version strings.
Fix handling invalidmodfiles rather better. This seems
to have been broken for some time.

Requires SPI 6
Closes #8748

Signed-off-by: cpw <cpw+github@weeksfamily.ca>